stworzono df przed pętlami part 2

--- a/day5.ipynb
+++ b/day5.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "['50 98 2', '52 50 48']"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "1           52                  50      48"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "81"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "35"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ile_map = len(contents)-1\n",
+    "ile_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +330,7 @@
        "46"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,17 +339,37 @@
     "#######\n",
     "print(seed_list)\n",
     "final = float('inf')  # Initialize final with positive infinity\n",
+    "df = []\n",
+    "\n",
+    "for j in range(ile_map):  \n",
+    "    wiersz = contents[1:][j].split(\"\\n\")[1:]\n",
+    "    df.append(df_from_wiersz(wiersz)) # mapa\n",
+    "\n",
+    "# dla kazdej pary\n",
     "for i in range(0, len(seed_list), 2):\n",
     "    print(i/2+1,' para start')\n",
     "    start = seed_list[i]\n",
     "    length = seed_list[i+1]\n",
+    "\n",
+    "    # dla kazdego seeda\n",
     "    for seed in range(start, start+length):\n",
+    "    # jesli w zakresie to rob normalnie, jak nie to to pomin\n",
+    "    \n",
+    "    # dla kazdej mapy\n",
     "        for j in range(ile_map):\n",
-    "            wiersz = contents[1:][j].split(\"\\n\")[1:]\n",
-    "            df = df_from_wiersz(wiersz)\n",
-    "            seed = calculate_new_seed_from_map(seed, df)\n",
+    "            seed = calculate_new_seed_from_map(seed, df[j])\n",
     "        final = min(final, seed)  # Update final with the minimum seed value\n",
     "final"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[79, 14, 55, 13]\n",
+    "1.0  para start\n",
+    "2.0  para start\n",
+    "46"
    ]
   },
   {
@@ -343,7 +384,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#######\n",
+    "print(seed_list)\n",
+    "final = float('inf')  # Initialize final with positive infinity\n",
+    "\n",
+    "# dla kazdej pary\n",
+    "for i in range(0, len(seed_list), 2):\n",
+    "    print(i/2+1,' para start')\n",
+    "    start = seed_list[i]\n",
+    "    length = seed_list[i+1]\n",
+    "\n",
+    "    # dla kazdego seeda\n",
+    "    for seed in range(start, start+length):\n",
+    "\n",
+    "    # dla kazdej mapy\n",
+    "        for j in range(ile_map):\n",
+    "            wiersz = contents[1:][j].split(\"\\n\")[1:]\n",
+    "            df = df_from_wiersz(wiersz) # mapa\n",
+    "            \n",
+    "            \n",
+    "\n",
+    "            seed = calculate_new_seed_from_map(seed, df)\n",
+    "        final = min(final, seed)  # Update final with the minimum seed value\n",
+    "final"
+   ]
   }
  ],
  "metadata": {
