--- a/day3.ipynb
+++ b/day3.ipynb
@@ -1385,7 +1385,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# wartosc liczb wokol punktu\n",
+    "def numbers_around_point(x,y):\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
