--- a/day6.ipynb
+++ b/day6.ipynb
@@ -126,7 +126,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "funkcja kwadratowa"
+    "funkcja kwadratowa\n",
+    "# part 2 v2 (matematyka)"
    ]
   },
   {
