can be 2 jockers

--- a/day7.ipynb
+++ b/day7.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "0"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "array(['3', '2', 'T', '3', 'K'], dtype='<U1')"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
        "([2, 2, 1, 1, 1], 1)"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "dict_items([('TTTT2', 1), ('AAAAA', 1), ('23332', 1), ('12345', 1)])"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
        "[('12345', 1), ('23332', 1), ('AAAAA', 1), ('TTTT2', 1)]"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,16 +393,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{}, {'32T3K': '765'}, {}, {}, {}, {'T55J5': '684'}, {}]"
+       "[{},\n",
+       " {'32T3K': '765'},\n",
+       " {'KK677': '28'},\n",
+       " {},\n",
+       " {'KTJJT': '220'},\n",
+       " {'T55J5': '684', 'QQQJA': '483'},\n",
+       " {}]"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,8 +418,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " {'KTJJT': '220'}, powinno byc 4\n",
+    " # todo przypadek 2ch jockerow"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -429,42 +443,33 @@
       "sum 765\n",
       "i 2\n",
       "sum 765\n",
-      "2\n",
-      "reka KTJJT values  220\n",
-      "i 2\n",
-      "sum 1205\n",
+      "1\n",
       "reka KK677 values  28\n",
+      "i 2\n",
+      "sum 821\n",
       "i 3\n",
-      "sum 1289\n",
-      "i 4\n",
-      "sum 1289\n",
-      "2\n",
-      "reka T55J5 values  684\n",
-      "i 4\n",
-      "sum 4025\n",
-      "reka QQQJA values  483\n",
-      "i 5\n",
-      "sum 6440\n",
-      "i 6\n",
-      "sum 6440\n",
+      "sum 821\n",
+      "0\n",
+      "i 3\n",
+      "sum 821\n",
       "1\n",
       "reka KTJJT values  220\n",
-      "i 6\n",
-      "sum 7760\n",
-      "i 7\n",
-      "sum 7760\n",
+      "i 3\n",
+      "sum 1481\n",
+      "i 4\n",
+      "sum 1481\n",
       "2\n",
       "reka T55J5 values  684\n",
-      "i 7\n",
-      "sum 12548\n",
+      "i 4\n",
+      "sum 4217\n",
       "reka QQQJA values  483\n",
-      "i 8\n",
-      "sum 16412\n",
-      "i 9\n",
-      "sum 16412\n",
+      "i 5\n",
+      "sum 6632\n",
+      "i 6\n",
+      "sum 6632\n",
       "0\n",
-      "i 9\n",
-      "sum 16412\n"
+      "i 6\n",
+      "sum 6632\n"
      ]
     }
    ],
