--- a/day8.ipynb
+++ b/day8.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
        "277"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
        " 'HBB']"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1589,7 +1589,7 @@
        " ['CCR', 'HLK']]"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1601,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2359,7 +2359,7 @@
        " 'HBB': ['CCR', 'HLK']}"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2371,7 +2371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2380,7 +2380,7 @@
        "['QXT', 'CDL']"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2391,7 +2391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2401,7 +2401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2410,7 +2410,7 @@
        "['AAA', 'SJA', 'BXA', 'QTA', 'HCA', 'LDA']"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2421,7 +2421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2430,7 +2430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2439,7 +2439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2451,7 +2451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2460,7 +2460,7 @@
        "[False, False, False, False, False, False]"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2471,27 +2471,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "current  ['QXT', 'KJB', 'MKR', 'HTQ', 'LJP', 'VPC']\n",
-      "10\n",
-      "current  ['RCF', 'NPX', 'XGF', 'JDK', 'BBH', 'XSG']\n",
-      "100\n",
-      "current  ['QQC', 'FMK', 'QLJ', 'NRR', 'DDF', 'LMQ']\n",
-      "1000\n",
-      "current  ['CQX', 'NCQ', 'TPG', 'XCC', 'HBB', 'DHQ']\n",
-      "10000\n",
-      "current  ['JJQ', 'JPP', 'NMT', 'VBL', 'MLF', 'CDD']\n",
-      "100000\n",
-      "current  ['VVG', 'HGQ', 'JGR', 'KRD', 'SCQ', 'BFV']\n",
       "1000000\n",
-      "current  ['FST', 'DTS', 'PGX', 'DCN', 'QRT', 'XNM']\n"
+      "current  ['FST', 'DTS', 'PGX', 'DCN', 'QRT', 'XNM']\n",
+      "10000000\n",
+      "current  ['BFJ', 'BQX', 'CSG', 'JLV', 'HVF', 'HSD']\n",
+      "100000000\n",
+      "current  ['CDL', 'QXG', 'MNT', 'VBN', 'CVV', 'JCS']\n"
      ]
     },
     {
@@ -2501,7 +2493,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Dell\\Desktop\\projects\\adventofcode2023\\day8.ipynb Cell 16\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Dell/Desktop/projects/adventofcode2023/day8.ipynb#X14sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39melif\u001b[39;00m moves[i] \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mL\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Dell/Desktop/projects/adventofcode2023/day8.ipynb#X14sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     \u001b[39m#current = dane.get(current)[0]\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Dell/Desktop/projects/adventofcode2023/day8.ipynb#X14sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     \u001b[39m#zmiana na liste\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Dell/Desktop/projects/adventofcode2023/day8.ipynb#X14sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(current)):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Dell/Desktop/projects/adventofcode2023/day8.ipynb#X14sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m         current[j] \u001b[39m=\u001b[39m dane\u001b[39m.\u001b[39mget(current[j])[\u001b[39m0\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Dell/Desktop/projects/adventofcode2023/day8.ipynb#X14sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m i \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Dell/Desktop/projects/adventofcode2023/day8.ipynb#X14sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m ile_krokow \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
+      "\u001b[1;32mc:\\Users\\patryk.tokarski\\Downloads\\adventofcode2023\\day8.ipynb Cell 16\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/patryk.tokarski/Downloads/adventofcode2023/day8.ipynb#X21sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m     i\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/patryk.tokarski/Downloads/adventofcode2023/day8.ipynb#X21sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m warunek \u001b[39m=\u001b[39m [x\u001b[39m.\u001b[39mendswith(\u001b[39m'\u001b[39m\u001b[39mZ\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m current]\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/patryk.tokarski/Downloads/adventofcode2023/day8.ipynb#X21sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m \u001b[39mif\u001b[39;00m ile_krokow \u001b[39min\u001b[39;49;00m [\u001b[39m1000000\u001b[39;49m,\u001b[39m10000000\u001b[39;49m,\u001b[39m100000000\u001b[39;49m]:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/patryk.tokarski/Downloads/adventofcode2023/day8.ipynb#X21sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m     \u001b[39mprint\u001b[39m(ile_krokow)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/patryk.tokarski/Downloads/adventofcode2023/day8.ipynb#X21sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mcurrent \u001b[39m\u001b[39m'\u001b[39m,current)\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -2532,7 +2524,7 @@
     "        i=0\n",
     "        \n",
     "    warunek = [x.endswith('Z') for x in current]\n",
-    "    if ile_krokow in [1,10,100,1000,10000,100000,1000000,10000000,100000000]:\n",
+    "    if ile_krokow in [1000000,10000000,100000000]:\n",
     "        print(ile_krokow)\n",
     "        print('current ',current)\n",
     "\n",
@@ -2551,7 +2543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2560,7 +2552,7 @@
        "['AAA', 'SJA', 'BXA', 'QTA', 'HCA', 'LDA']"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2588,76 +2580,45 @@
     "i = 0\n",
     "ile_krokow = 0\n",
     "warunek = [False]\n",
+    "dl = len(current)\n",
     "\n",
-    "while all(warunek) == False:\n",
-    "    #print('current', current, 'next step', moves[i])\n",
+    "start = time.time()\n",
     "\n",
-    "    if moves[i] == 'R':\n",
-    "        #current = dane.get(current)[1]\n",
-    "        # zmiana na liste\n",
-    "        for j in range(len(current)):\n",
-    "            current[j] = dane.get(current[j])[1]\n",
-    "    elif moves[i] == 'L':\n",
-    "        #current = dane.get(current)[0]\n",
-    "        #zmiana na liste\n",
-    "        for j in range(len(current)):\n",
-    "            current[j] = dane.get(current[j])[0]\n",
+    "lsd = []\n",
+    "#while all(warunek) == False:\n",
+    "#while [x[2] =='Z' for x in current].count(True) != dl:\n",
+    "for x in current:\n",
+    "    i = 0\n",
+    "    ile_krokow = 0 \n",
+    "    while x[2] !='Z':\n",
+    "        #print('current', current, 'next step', moves[i])\n",
     "\n",
-    "    i += 1\n",
-    "    ile_krokow += 1\n",
-    "    if i==len(moves):\n",
-    "        i=0\n",
-    "        \n",
-    "    warunek = [x.endswith('Z') for x in current]\n",
-    "    if ile_krokow ==100000:\n",
-    "        break\n",
+    "        if moves[i] == 'R':\n",
+    "            # podmiana wartosci (kolejny krok)\n",
+    "            x = dane.get(x)[1]\n",
+    "        else:\n",
+    "            x = dane.get(x)[0]\n",
     "\n",
-    "print('current ',current)\n",
-    "print('ile krokow ',ile_krokow)"
+    "        i += 1\n",
+    "        ile_krokow += 1\n",
+    "        if i==len(moves):\n",
+    "            i=0\n",
+    "\n",
+    "    print(ile_krokow, time.time()-start, x)\n",
+    "    lsd.append(ile_krokow)\n",
+    "\n",
+    "print(lsd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "current AAA\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Dell\\Desktop\\projects\\adventofcode2023\\day8.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Dell/Desktop/projects/adventofcode2023/day8.ipynb#X11sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     current \u001b[39m=\u001b[39m dane\u001b[39m.\u001b[39mget(current)[\u001b[39m1\u001b[39m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Dell/Desktop/projects/adventofcode2023/day8.ipynb#X11sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39melif\u001b[39;00m moves[i] \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mL\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Dell/Desktop/projects/adventofcode2023/day8.ipynb#X11sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     current \u001b[39m=\u001b[39m dane\u001b[39m.\u001b[39mget(current)[\u001b[39m0\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Dell/Desktop/projects/adventofcode2023/day8.ipynb#X11sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m i \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Dell/Desktop/projects/adventofcode2023/day8.ipynb#X11sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m ile_krokow \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "current = 'AAA'\n",
-    "i = 0\n",
-    "ile_krokow = 0\n",
-    "while current != 'ZZZ':\n",
-    "    print('current', current)\n",
-    "\n",
-    "    if moves[i] == 'R':\n",
-    "        current = dane.get(current)[1]\n",
-    "    elif moves[i] == 'L':\n",
-    "        current = dane.get(current)[0]\n",
-    "    i += 1\n",
-    "    ile_krokow += 1\n",
-    "    if i==len(moves):\n",
-    "        i=0\n",
-    "\n",
-    "print('current ',current)\n",
-    "print('ile krokow ',ile_krokow)"
+    "last = [20221, 13019, 19667, 14681, 18559, 16897]\n",
+    "last = [np.int64(20221), np.int64(13019), np.int64(19667), np.int64(14681), np.int64(18559), np.int64(16897)]\n",
+    "np.lcm.reduce(last)"
    ]
   },
   {
@@ -2684,7 +2645,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
